--- a/untitled test.html
+++ b/untitled test.html
@@ -10,6 +10,7 @@
     <header>
         <nav>
             <a href="#about">О нас</a>
+            <a href="#contact">Контакты</a>
         </nav>
         <div>
             <a href="tel:+7999999999">+79999999999</a>
