repaier button chenge

--- a/untitled test.html
+++ b/untitled test.html
@@ -14,7 +14,7 @@
         </nav>
         <div>
             <a href="tel:+79123999999">+79123999999</a>
-            <button>Свяжитесь с нами</button>
+            <button>Свяжитесь с нами сейчас</button>
         </div>
     </header>
     <h1>ХУЙ changed 1</h1>
