--- a/untitled test.html
+++ b/untitled test.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <header>
+        <p>Текст в хэдере для примера</p>
         <nav>
             <a href="#about">О нас</a>
             <a href="#contact">Контакты</a>
