--- a/untitled test.html
+++ b/untitled test.html
@@ -18,5 +18,7 @@
             <button>Свяжитесь с нами сейчас</button>
         </div>
     </header>
+    <h1>Какой то не внятный заголовок</h1>
+    <p>Какой то непонятный текст</p>
 </body>
 </html>
