--- a/untitled test.html
+++ b/untitled test.html
@@ -17,7 +17,7 @@
             <button>Свяжитесь с нами</button>
         </div>
     </header>
-    <h1>ХУЙ changed</h1>
+    <h1>changed</h1>
     <div>Какой то новый блок</div>
 </body>
 </html>
